Atualizar informações pessoais no HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <h1>Seu Nome</h1>
+            <h1>Kevin Santos</h1>
             <ul>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#projetos">Projetos</a></li>
@@ -20,32 +20,32 @@
 
     <main>
         <section id="hero">
-            <h2>Olá! Eu sou [Seu Nome]</h2>
+            <h2>Olá! Eu sou Kevin!</h2>
             <p>Desenvolvedor em formação aprendendo Git e GitHub</p>
         </section>
 
         <section id="sobre">
             <h2>Sobre Mim</h2>
-            <p>Escreva uma breve descrição sobre você...</p>
+            <p>Atualmente estou cursando Analise e desenvolvimento de sistemas.</p>
         </section>
 
         <section id="projetos">
             <h2>Meus Projetos</h2>
             <div class="projeto">
                 <h3>Projeto 1</h3>
-                <p>Descrição do projeto...</p>
+                <p>Aprendizado Git e Github</p>
             </div>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Email: seu.email@exemplo.com</p>
-            <p>GitHub: github.com/seu-usuario</p>
+            <p>Email: kevin_s_santos@estudante.sc.senai.br</p>
+            <p>GitHub: github.com/KevinSSsantos</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Kevin Santos. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
